apps/gpt-chat/overlays/staging/gpt-chat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpt-chat
spec:
  rules:
    - host: chat.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: gpt-chat
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - chat.contextsuite.com
      secretName: star-contextsuite-com
